# geradoc

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: static.yml
src/: main.rs  style.css
